--- a/style.css
+++ b/style.css
@@ -226,6 +226,16 @@ header p {
   }
 }
 
+@media (max-width: 24.375em) {
+  /* For my Iphone 6 ^^ */
+  header h1 {
+    font-size: 4rem;
+  }
+  header p {
+    font-size: 1.8rem;
+  }
+}
+
 header {
   background-color: var(--blue2);
 }
