--- a/style.css
+++ b/style.css
@@ -192,6 +192,17 @@ p {
   .col-6, .col-s-6 {
     width: 100%;
   }
+
+@media (max-width: 24.375em) {
+    /* For my Iphone 6 ^^ */
+  .col-6 {
+    padding-bottom: 3rem;
+  }
+  .col-6:last-child {
+    padding-bottom: 0;
+  }
+}
+
   .menu-button {
     padding-bottom: 4rem;
   }
@@ -229,7 +240,7 @@ header p {
 @media (max-width: 24.375em) {
   /* For my Iphone 6 ^^ */
   header h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
   header p {
     font-size: 1.8rem;
@@ -318,6 +329,15 @@ header {
   background-color: #F8F9FA;
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+@media (max-width: 46.875em) {
+  .code-background {
+    margin-bottom: 4rem;
+  }
+  .code-background:last-child {
+    padding-bottom: 4rem;
+  }
 }
 
 .code-background p {
