--- a/style.css
+++ b/style.css
@@ -318,7 +318,27 @@ header {
   text-decoration: none;
 }
 
+.language a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 2rem;
+  padding: .5rem;
+  border: none;
+  text-decoration: none;
+}
+
+.language img {
+  width: 4rem;
+}
+
 .menu-button a:hover {
+  /*border: .3rem solid var(--blue2);
+  padding: .3rem;*/
+  transform: scale(1.05);
+}
+
+.language a:hover {
   /*border: .3rem solid var(--blue2);
   padding: .3rem;*/
   transform: scale(1.05);
