--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ header p {
   font-size: 2rem;
 }
 
-@media (min-width: 46.875em) {
+@media (min-width: 41.25em) {
   /* For desktop and tablet */
   header h1 {
     font-size: 8rem;
@@ -255,7 +255,10 @@ header p {
 }
 
 header {
-  background-color: var(--blue2);
+  /*background-color: var(--blue2);*/
+  /*background: rgb(13,110,240);
+  background: linear-gradient(112deg, rgba(13,110,240,1) 35%, rgba(247,249,250,1) 100%);*/
+  background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
 }
 
 .header-container {
@@ -304,6 +307,11 @@ header {
   width: 4rem;
   margin-right: 3rem;
   color: whitesmoke;
+  transition: transform 0.25s ease;
+}
+
+.header-link svg:hover {
+  transform: translateX(0.25rem) translateY(0.25rem);
 }
 
 /* Resume 
@@ -313,7 +321,7 @@ header {
   flex-direction: row;
   justify-content: center;
   margin-top: 2rem;
-  padding: 1rem;
+  padding: .25rem;
   /*border: .1rem solid var(--blue2);*/
   font-family: monospace;
   /*font-weight: bold;*/
@@ -338,11 +346,12 @@ header {
   padding: .5rem;
   border: none;
   text-decoration: none;
+  transition: transform 0.25s ease;
 }
 
 .language img {
   width: 4rem;
-  margin-top: .5rem;
+  margin-top: 0;
 }
 
 .menu-button a:hover {
@@ -356,7 +365,7 @@ header {
 .language a:hover {
   /*border: .3rem solid var(--blue2);
   padding: .3rem;*/
-  transform: scale(1.05);
+  transform: translateX(0.25rem) translateY(0.25rem);
 }
 
 @media (max-width: 46.875em) {
