--- a/style.css
+++ b/style.css
@@ -498,9 +498,9 @@ footer div {
 .card-top {
   background-color: var(--secondary);
   /*border: 1px solid transparent;*/
-  border-top: 1px solid lightgray;
-  border-left: 1px solid lightgray;
-  border-right: 1px solid lightgray;
+  border-top: 1px solid var(--secondary);
+  border-left: 1px solid var(--secondary);
+  border-right: 1px solid var(--secondary);
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   padding: 20px 0 10px 0;
@@ -549,9 +549,9 @@ footer div {
 
 .card-bottom {
   padding: 20px;
-  border-bottom: 1px solid lightgray;
-  border-left: 1px solid lightgray;
-  border-right: 1px solid lightgray;
+  border-bottom: 1px solid var(--secondary);
+  border-left: 1px solid var(--secondary);
+  border-right: 1px solid var(--secondary);
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
 }
