--- a/style.css
+++ b/style.css
@@ -463,22 +463,22 @@ footer div {
   background-color: white;
 }
 
-.cloud-ok {
-  display: inline-block;
-  margin: 10px;
-  padding: 25px;
-  border: 1px solid var(--ok);
-  border-radius: 16px;
-  background-color: white;
+@media (max-width: 820px) {
+  .cloud-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    align-items: center;
+  }
 }
 
-.cloud-ko {
-  display: inline-block;
-  margin: 10px;
-  padding: 25px;
-  border: 1px solid var(--ko);
-  border-radius: 16px;
-  background-color: white;
+@media (max-width: 767px) {
+  .cloud-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    align-items: center;
+  }
 }
 
 .card {
